# plasmapy-addon-hello

./: pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/src/: about.rst  plasmapy_addon_hello.rst
plasmapy_addon_hello/: __init__.py
requirements/: build_requirements.txt  docs_requirements.txt  install_requirements.txt  setup_requirements.txt  tests_requirements.txt
